--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
   <!-- ERGEBNISSE -->
   <main id="results">
     <div id="shareBox"></div>
-  
+
+    <div id="similarEntries"></div>
+
+    
   <!-- KATEGORIEN (MUSS VOR results stehen!) -->
   <div class="category-grid"></div>
 
