--- a/index.html
+++ b/index.html
@@ -85,17 +85,52 @@
   </div>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="footer-main">
-      MarketShield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
+<footer>
+  <div class="footer-main">
+    MarketShield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
+  </div>
+
+  <div class="footer-links">
+    <a href="about.html">Über MarketShield</a> ·
+    <a href="stiftung.html">Über die LIGONE Stiftung</a> ·
+    <a href="impressum.html">Impressum</a> ·
+    <a href="datenschutz.html">Datenschutz</a>
+  </div>
+
+  <!-- ================= SUPPORT BOX ================= -->
+  <section class="support-box">
+    <h3>💚 MarketShield unterstützen</h3>
+
+    <p class="support-text">
+      MarketShield ist ein unabhängiges Aufklärungsprojekt.
+      Es gibt keine Investoren, keine Industrie-Finanzierung
+      und keine bezahlten Bewertungen.
+    </p>
+
+    <a
+      class="support-paypal"
+      href="https://paypal.me/wahrheitgewinnt"
+      target="_blank"
+      rel="noopener"
+    >
+      Über PayPal unterstützen
+    </a>
+
+    <div class="support-crypto">
+      <strong>🔐 Alternativ: Unterstützung per Kryptowährung</strong>
+      <p>Für Nutzer, die bewusst dezentral unterstützen möchten.</p>
+      <code>
+        ETH / Polygon (ERC20)<br>
+        0x5883C4013B4051e7f47624dC81B7118dE8fbD0FF
+      </code>
+      <small>
+        Die Adresse gehört ausschließlich dem Projekt MarketShield.
+      </small>
     </div>
-    <div class="footer-links">
-      <a href="about.html">Über MarketShield</a> ·
-      <a href="stiftung.html">Über die LIGONE Stiftung</a> ·
-      <a href="impressum.html">Impressum</a> ·
-      <a href="datenschutz.html">Datenschutz</a>
-    </div>
-  </footer>
+  </section>
+
+</footer>
+
 
   <!-- REPORT FAB -->
   <button id="reportFab" aria-label="Problem melden">⚠️</button>
