--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -118,8 +118,17 @@
 
   <!-- Vergleichsgrafik -->
   <div class="graphic">
-    <img src="/assets/vorsorge-vergleich.svg"
-         alt="Vergleich Altersvorsorge: staatliche Rente, Aktien, Kryptowährungen und LIGONE">
+    <img
+  src="assets/vorsorge-vergleich.svg"
+  style="
+    display:block;
+    width:100%;
+    min-height:300px;
+    background:#ff0000;
+    border:5px solid blue;
+  "
+>
+
   </div>
 
   <!-- Aufklapp-Erklärungen -->
