--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -118,18 +118,10 @@
 
   <!-- Vergleichsgrafik -->
   <div class="graphic">
-    <img
-  src="assets/vorsorge-vergleich.svg"
-  style="
-    display:block;
-    width:100%;
-    min-height:300px;
-    background:#ff0000;
-    border:5px solid blue;
-  "
->
+  <img src="assets/vorsorge-vergleich.svg"
+       alt="Vergleich Altersvorsorge: Staat, Aktien, Krypto, LIGONE">
+</div>
 
-  </div>
 
   <!-- Aufklapp-Erklärungen -->
   <details>
