--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -168,9 +168,14 @@
       Es ist ein freiwilliges Vorsorge-Werkzeug,
       das nicht auf Umlage, Zwang oder staatliche Auszahlungsdeckel basiert.
     </p>
-    <p>
-      Weiterführende Informationen zum Projekt finden sich auf der offiziellen LIGONE-Webseite.
-    </p>
+    <p class="ligone-link">
+  Wer sich für neue, freiwillige Vorsorge-Ansätze interessiert,
+  findet weiterführende Informationen beim Projekt
+  <a href="https://ligone-token.github.io/ligone-web/" target="_blank" rel="noopener">
+    LIGONE
+  </a>.
+</p>
+
   </div>
 
   <!-- Chat Hinweis -->
