--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8">
   <title>Altersvorsorge – strukturell erklärt | MarketShield</title>
 
+    <!-- Open Graph / Social Preview -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Altersvorsorge ist keine Renditefrage">
+  <meta property="og:description"
+        content="Warum viele Vorsorgesysteme strukturell begrenzt sind – neutral erklärt.">
+  <meta property="og:url"
+        content="https://ligone-token.github.io/marketshield/altersvorsorge.html">
+  <meta property="og:image"
+        content="https://ligone-token.github.io/marketshield/assets/vorsorge-preview.jpg">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image"
+        content="https://ligone-token.github.io/marketshield/assets/vorsorge-preview.jpg">
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
         content="Altersvorsorge strukturell erklärt: staatliche Rente, Aktien, Krypto und neue Vorsorge-Ansätze im neutralen Vergleich. Ohne Werbung, ohne Versprechen.">
