--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -206,6 +206,21 @@
     Sie dient ausschließlich der strukturellen Einordnung
     und der Vorbereitung auf offene Diskussionen.
   </div>
+<section class="discussion">
+  <h2>Offener Gesprächsraum</h2>
+
+  <p>
+    Hier können sich Menschen über Altersvorsorge,
+    bestehende Systeme und neue Ansätze austauschen.
+  </p>
+
+  <p class="discussion-hint">
+    Bitte beachte: keine Finanzberatung, keine Versprechen,
+    respektvoller Umgang.
+  </p>
+
+  <!-- Chat kommt hier -->
+</section>
 
 </main>
 
