--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -210,6 +210,27 @@
   <h2>Offener Gesprächsraum</h2>
 
   <p>
+    Hier können sich Menschen sachlich über Altersvorsorge,
+    bestehende Systeme und neue Ansätze austauschen.
+  </p>
+
+  <p class="discussion-hint">
+    Keine Finanzberatung, keine Empfehlungen, respektvoller Umgang.
+  </p>
+
+  <div id="comments"></div>
+
+  <form id="commentForm">
+    <input type="text" id="alias" placeholder="Name oder Alias" required>
+    <textarea id="message" placeholder="Dein Beitrag (max. 500 Zeichen)" required></textarea>
+    <button type="submit">Beitrag senden</button>
+  </form>
+</section>
+
+  <section class="discussion">
+  <h2>Offener Gesprächsraum</h2>
+
+  <p>
     Hier können sich Menschen über Altersvorsorge,
     bestehende Systeme und neue Ansätze austauschen.
   </p>
