--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -113,6 +113,37 @@
       border-top: 1px solid #ddd;
       padding-top: 16px;
     }
+    /* Gesprächsraum */
+.discussion {
+  margin-top: 60px;
+  padding-top: 40px;
+  border-top: 1px solid #ddd;
+}
+
+.discussion-hint {
+  font-size: 0.9rem;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+#comments {
+  margin-bottom: 30px;
+}
+
+.comment {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 12px 16px;
+  margin-bottom: 12px;
+}
+
+.comment .meta {
+  font-size: 0.8rem;
+  color: #777;
+  margin-bottom: 6px;
+}
+
   </style>
 </head>
 
@@ -244,6 +275,55 @@
 </section>
 
 </main>
+<!-- Gesprächsraum Script -->
+<script>
+const SUPABASE_URL = "https://DEINPROJECT.supabase.co";
+const SUPABASE_KEY = "DEIN_PUBLIC_ANON_KEY";
+const PAGE = "altersvorsorge";
+
+async function loadComments() {
+  const r = await fetch(
+    `${SUPABASE_URL}/rest/v1/vorsorge_comments?page=eq.${PAGE}&order=created_at.desc`,
+    {
+      headers: {
+        apikey: SUPABASE_KEY,
+        Authorization: `Bearer ${SUPABASE_KEY}`
+      }
+    }
+  );
+  const data = await r.json();
+  const box = document.getElementById("comments");
+  box.innerHTML = "";
+  data.forEach(c => {
+    box.innerHTML += `
+      <div class="comment">
+        <div class="meta">${c.alias} · ${new Date(c.created_at).toLocaleString()}</div>
+        <div>${c.message}</div>
+      </div>`;
+  });
+}
+
+document.getElementById("commentForm").addEventListener("submit", async e => {
+  e.preventDefault();
+  const alias = document.getElementById("alias").value.trim();
+  const message = document.getElementById("message").value.trim();
+
+  await fetch(`${SUPABASE_URL}/rest/v1/vorsorge_comments`, {
+    method: "POST",
+    headers: {
+      apikey: SUPABASE_KEY,
+      Authorization: `Bearer ${SUPABASE_KEY}`,
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ page: PAGE, alias, message })
+  });
+
+  e.target.reset();
+  loadComments();
+});
+
+loadComments();
+</script>
 
 </body>
 </html>
