--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -240,23 +240,24 @@
 <section class="discussion">
   <h2>Offener Gesprächsraum</h2>
 
-  <p>
-    Hier können sich Menschen sachlich über Altersvorsorge,
-    bestehende Systeme und neue Ansätze austauschen.
+  <p class="discussion-intro">
+    Gedanken, Erfahrungen und Fragen zur Altersvorsorge.
+    Kein Verkaufsraum. Keine Empfehlungen.
   </p>
 
-  <p class="discussion-hint">
-    Keine Finanzberatung, keine Empfehlungen, respektvoller Umgang.
-  </p>
+  <div class="discussion-rules">
+    Sachlich · respektvoll · keine Finanzberatung
+  </div>
 
   <div id="comments"></div>
 
-  <form id="commentForm">
+  <form id="commentForm" class="comment-form">
     <input type="text" id="alias" placeholder="Name oder Alias" required>
     <textarea id="message" placeholder="Dein Beitrag (max. 500 Zeichen)" required></textarea>
-    <button type="submit">Beitrag senden</button>
+    <button type="submit">Beitrag veröffentlichen</button>
   </form>
 </section>
+
 
 </main>
 <!-- Gesprächsraum Script -->
