--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -143,6 +143,26 @@
   color: #777;
   margin-bottom: 6px;
 }
+.comment-form textarea {
+  width: 100%;
+  min-height: 140px;        /* reicht real für ~500 Zeichen */
+  resize: vertical;        /* Nutzer darf größer ziehen */
+  padding: 10px 12px;
+  font-size: 0.95rem;
+  line-height: 1.4;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.comment-form input {
+  width: 100%;
+  padding: 8px 10px;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
 
   </style>
 </head>
