--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -163,6 +163,19 @@
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
+.contribution textarea {
+  width: 100%;
+  min-height: 220px;          /* entscheidend */
+  padding: 18px 20px;
+  font-size: 16px;
+  line-height: 1.7;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  resize: vertical;
+  box-sizing: border-box;
+  font-family: inherit;
+  background: #fff;
+}
 
   </style>
 </head>
