--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -176,6 +176,41 @@
   font-family: inherit;
   background: #fff;
 }
+.discussion-intro {
+  color: #444;
+  margin-bottom: 12px;
+}
+
+.discussion-rules {
+  font-size: 0.85rem;
+  color: #777;
+  margin-bottom: 24px;
+}
+
+#comments {
+  margin-bottom: 60px;
+}
+
+#comments .placeholder {
+  font-style: italic;
+  color: #777;
+}
+
+.comment {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px 22px;
+  margin-bottom: 24px;
+  line-height: 1.7;
+  font-size: 16px;
+}
+
+.comment .meta {
+  font-size: 0.8rem;
+  color: #777;
+  margin-bottom: 8px;
+}
 
   </style>
 </head>
