--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -343,11 +343,23 @@
 </main>
 <!-- Gesprächsraum Script -->
 <script>
-const SUPABASE_URL = "https://DEINPROJECT.supabase.co";
-const SUPABASE_KEY = "DEIN_PUBLIC_ANON_KEY";
+const SUPABASE_URL = "https://thrdlycfwlsegriduqvw.supabase.co";
+const SUPABASE_KEY = "sb_publishable_JHb4LBhP26eI7BgDS1jIkw_4OYn3-F9";
 const PAGE = "altersvorsorge";
 
+function escapeHtml(text) {
+  return text.replace(/[&<>"']/g, m => ({
+    "&":"&amp;",
+    "<":"&lt;",
+    ">":"&gt;",
+    '"':"&quot;",
+    "'":"&#039;"
+  })[m]);
+}
+
 async function loadComments() {
+  const box = document.getElementById("comments");
+
   const r = await fetch(
     `${SUPABASE_URL}/rest/v1/vorsorge_comments?page=eq.${PAGE}&order=created_at.desc`,
     {
@@ -357,22 +369,34 @@ async function loadComments() {
       }
     }
   );
+
   const data = await r.json();
-  const box = document.getElementById("comments");
   box.innerHTML = "";
+
+  if (!data.length) {
+    box.innerHTML = `<p class="placeholder">Noch keine Beiträge vorhanden.</p>`;
+    return;
+  }
+
   data.forEach(c => {
-    box.innerHTML += `
-      <div class="comment">
-        <div class="meta">${c.alias} · ${new Date(c.created_at).toLocaleString()}</div>
-        <div>${c.message}</div>
-      </div>`;
+    const div = document.createElement("div");
+    div.className = "comment";
+    div.innerHTML = `
+      <div class="meta">
+        ${escapeHtml(c.alias)} · ${new Date(c.created_at).toLocaleString()}
+      </div>
+      <div>${escapeHtml(c.message).replace(/\n/g, "<br>")}</div>
+    `;
+    box.appendChild(div);
   });
 }
 
 document.getElementById("commentForm").addEventListener("submit", async e => {
   e.preventDefault();
+
   const alias = document.getElementById("alias").value.trim();
   const message = document.getElementById("message").value.trim();
+  if (!alias || !message) return;
 
   await fetch(`${SUPABASE_URL}/rest/v1/vorsorge_comments`, {
     method: "POST",
@@ -390,6 +414,7 @@ document.getElementById("commentForm").addEventListener("submit", async e => {
 
 loadComments();
 </script>
+
 
 </body>
 </html>
