--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -326,7 +326,10 @@
 
   <!-- Eingabe -->
   <form id="commentForm" class="comment-form">
-    <input type="text" id="alias" placeholder="Name oder Alias" required>
+    <input
+  type="text"
+  id="alias"
+  placeholder="Name oder Alias (optional)">
 
     <textarea
       id="message"
