--- a/index.html
+++ b/index.html
@@ -166,6 +166,71 @@ ETH / Polygon (ERC20)<br>
     gtag('js', new Date());
     gtag('config', 'G-QBT1L9DKNW');
   </script>
+<div class="lig1-buy-box">
+  <h3>💶 LIG1 kaufen (1-Euro-Beispiel)</h3>
 
+  <p><strong>Preis (Richtwert):</strong><br>
+  1 LIG1 ≈ <span class="lig1-highlight">$0.000624</span></p>
+
+  <p><strong>Beispiel:</strong><br>
+  Für <span class="lig1-highlight">1 Euro</span> bekommst du ungefähr
+  <span class="lig1-highlight">1.600 LIG1</span>.</p>
+
+  <div class="lig1-step">
+    <p><strong>1️⃣ App installieren</strong></p>
+    <p>Installiere die kostenlose Wallet-App<br>
+    <span class="lig1-highlight">:contentReference[oaicite:0]{index=0}</span></p>
+    <p class="lig1-small">
+      Neue Wallet erstellen<br>
+      Wörter sicher aufschreiben
+    </p>
+  </div>
+
+  <div class="lig1-step">
+    <p><strong>2️⃣ Genau 1 Euro vorbereiten</strong></p>
+    <p>
+      In der App auf <strong>„Kaufen“</strong> tippen<br>
+      <strong>POL (Polygon)</strong> wählen<br>
+      <span class="lig1-highlight">1,00 €</span> eingeben
+    </p>
+  </div>
+
+  <div class="lig1-step">
+    <p><strong>3️⃣ Preis ansehen</strong></p>
+    <p>
+      Du siehst <strong>vorher</strong>, wie viele LIG1 du bekommst.<br>
+      <span class="lig1-highlight">Noch kein Kauf.</span>
+    </p>
+  </div>
+
+  <div class="lig1-step">
+    <p><strong>4️⃣ Kaufen</strong></p>
+    <p>
+      Nur wenn alles passt:<br>
+      auf <strong>„Tauschen“</strong> klicken<br>
+      und bestätigen.
+    </p>
+  </div>
+
+  <a href="https://app.uniswap.org/#/swap?chain=polygon&outputCurrency=0x35291849e169A1B001eAf43Ac9D1D259fD7d22b1
+"
+     target="_blank"
+     rel="noopener"
+     class="lig1-button">
+     LIG1 kaufen (Preis vorher sehen)
+  </a>
+
+  <p class="lig1-small">
+    🔒 Kein Abo · kein Vertrag · Kauf nur nach Bestätigung · jederzeit abbrechen
+  </p>
+
+  <div class="lig1-step">
+    <p><strong>LIG1 nicht sichtbar?</strong></p>
+    <p class="lig1-small">
+      Wallet öffnen → nach unten scrollen →<br>
+      „Token hinzufügen“ → LIG1-Adresse einfügen
+    </p>
+  </div>
+</div>
 </body>
 </html>
