--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@ ETH / Polygon (ERC20)<br>
   <div class="lig1-step">
     <p><strong>1️⃣ App installieren</strong></p>
     <p>Installiere die kostenlose Wallet-App<br>
-    <span class="lig1-highlight">:contentReference[oaicite:0]{index=0}</span></p>
+    <a href="https://metamask.io" target="_blank" rel="noopener" class="lig1-highlight">
+  MetaMask
+</a>
+</p>
     <p class="lig1-small">
       Neue Wallet erstellen<br>
       Wörter sicher aufschreiben
