--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -494,6 +494,81 @@ loadComments();
     }
   }
 </style>
+<style>
+  .lig1-buy-box {
+    position: fixed;
+    right: 16px;
+    top: 120px;
+    width: 320px;
+    background: #fff;
+    border: 2px solid #2e7d32;
+    border-radius: 14px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    padding: 16px;
+    font-family: system-ui, sans-serif;
+    z-index: 9999;
+  }
+
+  .lig1-buy-box * {
+    box-sizing: border-box;
+    text-align: left;
+  }
+
+  .lig1-buy-box h3 {
+    margin: 0 0 10px;
+    font-size: 18px;
+    color: #2e7d32;
+  }
+
+  .lig1-buy-box p {
+    font-size: 14px;
+    line-height: 1.4;
+    margin: 6px 0;
+  }
+
+  .lig1-highlight {
+    font-weight: 700;
+  }
+
+  .lig1-step {
+    margin-top: 10px;
+    padding-top: 8px;
+    border-top: 1px solid #e0e0e0;
+  }
+
+  .lig1-button {
+    display: block;
+    margin-top: 12px;
+    padding: 12px;
+    text-align: center;
+    background: #2e7d32;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  .lig1-button:hover {
+    background: #256428;
+  }
+
+  .lig1-small {
+    font-size: 12px;
+    color: #555;
+    margin-top: 8px;
+  }
+
+  @media (max-width: 768px) {
+    .lig1-buy-box {
+      left: 12px;
+      right: 12px;
+      bottom: 12px;
+      top: auto;
+      width: auto;
+    }
+  }
+</style>
 
 <div class="lig1-buy-box">
   <h3>💶 LIG1 kaufen (1-Euro-Beispiel)</h3>
