--- a/index.html
+++ b/index.html
@@ -291,13 +291,14 @@ ETH / Polygon (ERC20)<br>
     </p>
   </div>
 
-  <a href="https://app.uniswap.org/#/swap?chain=polygon&outputCurrency=0x35291849e169A1B001eAf43Ac9D1D259fD7d22b1
-"
-     target="_blank"
-     rel="noopener"
-     class="lig1-button">
-     LIG1 kaufen (Preis vorher sehen)
-  </a>
+  <a
+  href="https://app.uniswap.org/#/swap?chain=polygon&outputCurrency=0x35291849e169A1B001eAf43Ac9D1D259fD7d22b1"
+  target="_blank"
+  rel="noopener"
+  class="lig1-button">
+  LIG1 kaufen (Preis vorher sehen)
+</a>
+
 
   <p class="lig1-small">
     🔒 Kein Abo · kein Vertrag · Kauf nur nach Bestätigung · jederzeit abbrechen
