--- a/index.html
+++ b/index.html
@@ -166,40 +166,50 @@ ETH / Polygon (ERC20)<br>
     gtag('js', new Date());
     gtag('config', 'G-QBT1L9DKNW');
   </script>
+<!-- ===============================
+ LIG1 KAUF-BOX – STABIL & KLAPPBAR
+=============================== -->
+
 <style>
   .lig1-buy-box {
     position: fixed;
     right: 16px;
-    top: 120px;
+    bottom: 16px;
     width: 320px;
+    max-height: 80vh;
     background: #fff;
     border: 2px solid #2e7d32;
     border-radius: 14px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-    padding: 16px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.18);
     font-family: system-ui, sans-serif;
     z-index: 9999;
+    overflow: hidden;
   }
 
-  .lig1-buy-box * {
-    box-sizing: border-box;
-    text-align: left;
+  .lig1-header {
+    padding: 14px 16px;
+    background: #2e7d32;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
   }
 
-  .lig1-buy-box h3 {
-    margin: 0 0 10px;
-    font-size: 18px;
-    color: #2e7d32;
+  .lig1-content {
+    padding: 14px 16px;
+    overflow-y: auto;
+    max-height: calc(80vh - 52px);
+    display: none;
   }
 
-  .lig1-buy-box p {
+  .lig1-buy-box.open .lig1-content {
+    display: block;
+  }
+
+  .lig1-content p {
     font-size: 14px;
     line-height: 1.4;
     margin: 6px 0;
-  }
-
-  .lig1-highlight {
-    font-weight: 700;
   }
 
   .lig1-step {
@@ -216,13 +226,9 @@ ETH / Polygon (ERC20)<br>
     background: #2e7d32;
     color: #fff;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 700;
     text-decoration: none;
-  }
-
-  .lig1-button:hover {
-    background: #256428;
   }
 
   .lig1-small {
@@ -235,83 +241,70 @@ ETH / Polygon (ERC20)<br>
     .lig1-buy-box {
       left: 12px;
       right: 12px;
-      bottom: 12px;
-      top: auto;
       width: auto;
     }
   }
 </style>
 
-  <div class="lig1-buy-box">
-  <h3>💶 LIG1 kaufen (1-Euro-Beispiel)</h3>
+<div class="lig1-buy-box" id="lig1Box">
+  <div class="lig1-header" onclick="toggleLig1Box()">
+    💶 LIG1 kaufen – 1 € Beispiel ▾
+  </div>
 
-  <p><strong>Preis (Richtwert):</strong><br>
-  1 LIG1 ≈ <span class="lig1-highlight">$0.000624</span></p>
+  <div class="lig1-content">
+    <p><strong>Beispiel:</strong><br>
+      Für <strong>1 Euro</strong> bekommst du ca. <strong>1.600 LIG1</strong>.
+    </p>
 
-  <p><strong>Beispiel:</strong><br>
-  Für <span class="lig1-highlight">1 Euro</span> bekommst du ungefähr
-  <span class="lig1-highlight">1.600 LIG1</span>.</p>
+    <div class="lig1-step">
+      <p><strong>1️⃣ App installieren</strong><br>
+        <a href="https://metamask.io" target="_blank" rel="noopener">MetaMask</a>
+      </p>
+    </div>
 
-  <div class="lig1-step">
-    <p><strong>1️⃣ App installieren</strong></p>
-    <p>Installiere die kostenlose Wallet-App<br>
-    <a href="https://metamask.io" target="_blank" rel="noopener" class="lig1-highlight">
-  MetaMask
-</a>
-</p>
+    <div class="lig1-step">
+      <p><strong>2️⃣ 1,00 € vorbereiten</strong><br>
+        In MetaMask → „Kaufen“ → POL → 1,00 €
+      </p>
+    </div>
+
+    <div class="lig1-step">
+      <p><strong>3️⃣ Preis ansehen</strong><br>
+        Du siehst vor dem Kauf, wie viele LIG1 du bekommst.
+      </p>
+    </div>
+
+    <div class="lig1-step">
+      <p><strong>4️⃣ Kaufen</strong><br>
+        Nur wenn alles passt, bestätigen.
+      </p>
+    </div>
+
+    <a
+      class="lig1-button"
+      href="https://app.uniswap.org/#/swap?chain=polygon&outputCurrency=0x35291849e169A1B001eAf43Ac9D1D259fD7d22b1"
+      target="_blank"
+      rel="noopener">
+      LIG1 kaufen
+    </a>
+
     <p class="lig1-small">
-      Neue Wallet erstellen<br>
-      Wörter sicher aufschreiben
+      Kein Abo · kein Vertrag · jederzeit abbrechen
     </p>
-  </div>
 
-  <div class="lig1-step">
-    <p><strong>2️⃣ Genau 1 Euro vorbereiten</strong></p>
-    <p>
-      In der App auf <strong>„Kaufen“</strong> tippen<br>
-      <strong>POL (Polygon)</strong> wählen<br>
-      <span class="lig1-highlight">1,00 €</span> eingeben
-    </p>
-  </div>
-
-  <div class="lig1-step">
-    <p><strong>3️⃣ Preis ansehen</strong></p>
-    <p>
-      Du siehst <strong>vorher</strong>, wie viele LIG1 du bekommst.<br>
-      <span class="lig1-highlight">Noch kein Kauf.</span>
-    </p>
-  </div>
-
-  <div class="lig1-step">
-    <p><strong>4️⃣ Kaufen</strong></p>
-    <p>
-      Nur wenn alles passt:<br>
-      auf <strong>„Tauschen“</strong> klicken<br>
-      und bestätigen.
-    </p>
-  </div>
-
-  <a
-  href="https://app.uniswap.org/#/swap?chain=polygon&outputCurrency=0x35291849e169A1B001eAf43Ac9D1D259fD7d22b1"
-  target="_blank"
-  rel="noopener"
-  class="lig1-button">
-  LIG1 kaufen (Preis vorher sehen)
-</a>
-
-
-
-  <p class="lig1-small">
-    🔒 Kein Abo · kein Vertrag · Kauf nur nach Bestätigung · jederzeit abbrechen
-  </p>
-
-  <div class="lig1-step">
-    <p><strong>LIG1 nicht sichtbar?</strong></p>
-    <p class="lig1-small">
-      Wallet öffnen → nach unten scrollen →<br>
-      „Token hinzufügen“ → LIG1-Adresse einfügen
-    </p>
+    <div class="lig1-step">
+      <p><strong>Nicht sichtbar?</strong><br>
+        Wallet → „Token hinzufügen“ → LIG1-Adresse
+      </p>
+    </div>
   </div>
 </div>
+
+<script>
+  function toggleLig1Box() {
+    document.getElementById("lig1Box").classList.toggle("open");
+  }
+</script>
+
 </body>
 </html>
