--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ ETH / Polygon (ERC20)<br>
 
 <div class="lig1-buy-box" id="lig1Box">
   <div class="lig1-header" onclick="toggleLig1Box()">
-    💶 LIG1 kaufen – 1 € Beispiel ▾
+    💶 LIG1 mit 1 € testen ▾
   </div>
 
   <div class="lig1-content">
