--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -576,7 +576,7 @@ loadComments();
 
 <div class="lig1-buy-box" id="lig1Box">
   <div class="lig1-header" onclick="toggleLig1Box()">
-    💶 LIG1 kaufen – 1 € Beispiel ▾
+    💶 LIG1 mit 1 € testen ▾
   </div>
 
   <div class="lig1-content">
