--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ ETH / Polygon (ERC20)<br>
   margin-top: 8px;
 }
 
+/* ===== MOBILE ===== */
 @media (max-width: 768px) {
 
   /* 📱 IMMER sichtbar platzieren */
