--- a/altersvorsorge.html
+++ b/altersvorsorge.html
@@ -211,6 +211,96 @@
   color: #777;
   margin-bottom: 8px;
 }
+/* ===== Diskussionsraum – KURIERT & SERIÖS ===== */
+
+.discussion {
+  margin-top: 80px;
+  padding-top: 40px;
+  border-top: 1px solid #e0e0e0;
+}
+
+.discussion h2 {
+  margin-bottom: 12px;
+}
+
+.discussion-intro {
+  max-width: 720px;
+  color: #444;
+  margin-bottom: 10px;
+}
+
+.discussion-rules {
+  font-size: 0.85rem;
+  color: #777;
+  margin-bottom: 36px;
+}
+
+/* Kommentare */
+#comments {
+  margin-bottom: 50px;
+}
+
+.comment {
+  background: #ffffff;
+  border: 1px solid #e5e5e5;
+  border-radius: 12px;
+  padding: 18px 20px;
+  margin-bottom: 18px;
+}
+
+.comment .meta {
+  font-size: 0.8rem;
+  color: #777;
+  margin-bottom: 8px;
+}
+
+.comment div:last-child {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #222;
+}
+
+/* Formular */
+.comment-form {
+  background: #f5f7f6;
+  border-radius: 14px;
+  padding: 24px;
+  border: 1px solid #e0e0e0;
+}
+
+.comment-form input,
+.comment-form textarea {
+  width: 100%;
+  padding: 14px 16px;
+  margin-bottom: 14px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  font-family: inherit;
+}
+
+/* DAS WAR DEIN KRITISCHER PUNKT */
+.comment-form textarea {
+  min-height: 200px;
+  line-height: 1.6;
+  resize: vertical;
+}
+
+/* Button bewusst ruhig */
+.comment-form button {
+  background: #2e7d32;
+  color: #fff;
+  border: none;
+  border-radius: 999px;
+  padding: 10px 26px;
+  font-size: 0.95rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.comment-form button:hover {
+  background: #256428;
+}
 
   </style>
 </head>
